[project]
name = "imagint-app-backend"
version = "0.1.0"
description = "Imagint App Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "blinker>=1.9.0",
    "celery~=5.3.6",
    "click~=8.1.0",
    "flask~=3.0.1",
    "flask-limiter[redis]>=3.12",
    "flask-login~=0.6.3",
    "flask-migrate~=4.0.5",
    "flask-restful~=0.3.0",
    "flask-sqlalchemy~=3.0.5",
    "gevent~=23.9.1",
    "gunicorn~=21.2.0",
    "pika>=1.3.2",
    "psycopg2-binary~=2.9.6",
    "pycryptodome==3.19.1",
    "pydantic>=2.11.7",
    "pyjwt~=2.8.0",
    "pypinyin>=0.54.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.0.0",
    "redis[hiredis]~=5.0.3",
    "requests>=2.32.4",
    "sqlalchemy~=1.4.28",
    "ulid==1.1.0",
    "validator-collection>=1.5.0",
    "werkzeug~=3.0.1",
]
